<?xml version="1.0"?>
<package format="3">
  <name>turtlesim_cli</name>
  <version>0.0.1</version>
  <description>CLI tool for controlling Turtlesim in ROS 2</description>
  <maintainer email="dldnjswns7412@gmail.com">lwj</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>turtlesim</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

