<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlesim_draw</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dldnjswns7412@gmail.com">lwj</maintainer>
  <license>Apache-2.0</license>  <!-- 라이선스 정보 추가 -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>  <!-- turtlesim 의존성 추가 -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>  <!-- turtlesim 실행 의존성 추가 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

