<?xml version="1.0"?>
<package>
  <name>parameter_gui</name>
  <version>0.1.0</version>
  <description>
    GUI for adjusting parameters in the image processing node, built with ROS2 and Qt5.
  </description>

  <maintainer email="author@mail.com">author</maintainer>
  <author>author</author>
  <license>BSD</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qt5</build_depend>
  <build_depend>Qt5Widgets</build_depend>
  <build_depend>Qt5Core</build_depend>
  <build_depend>Qt5Gui</build_depend>
  <build_depend>Qt5Network</build_depend>
  <build_depend>opencv</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>qt5</exec_depend>
  <exec_depend>Qt5Widgets</exec_depend>
  <exec_depend>Qt5Core</exec_depend>
  <exec_depend>Qt5Gui</exec_depend>
  <exec_depend>Qt5Network</exec_depend>
  <exec_depend>opencv</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

